step-0-12/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: my-nginx.com
    http:
      paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
